Return Tx hash instead of waitingg
